--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-js-getting-started",
+  "name": "valine-admin",
   "version": "1.0.0",
   "private": true,
   "description": "A sample Node.js app using Express",
